# copilot-training-python

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
docs/: DESIGN_DOC.md
src/: CMakeLists.txt  CustomSerialTemperatureSensor.cpp  CustomSerialTemperatureSensor.h  ISerialPort.h  SerialPort.cpp  SerialPort.h  custom_serial_temperature_sensor.py  main.cpp  serial_port.py
tests/: CMakeLists.txt  TemperatureSensorTests.cpp  test_temperature_sensor.py
